# rubiks_cube

./: .gitignore  Pipfile  README.md  environment.yml  pyproject.toml  setup.py
rubiks_cube/: __init__.py  constants.py  cube.py  cubeai.py
rubiks_cube/test/: test_cube.py
rubiks_cube/test/text_files/: bccr.txt  bcr.txt  dccr.txt  dcr.txt  fcr.txt  lccr.txt  rccr.txt  rcr.txt  tccr.txt
src/: __init__.py  constants.py  cube.py  cubeai.py  main.py  playcube.py
src/ai/: cubeai.py
src/cube/: cube.py
src/test/: test_cube.py
src/test/text_files/: fccr.txt  lcr.txt  solved_cube_string.txt  tcr.txt
